--- a/frontend/src/app/Pages/popup/consumptions/consumptions.component.html
+++ b/frontend/src/app/Pages/popup/consumptions/consumptions.component.html
@@ -1,20 +1,22 @@
 <div class="container">
-  <table class="table">
-    <thead>
+  <div class="table-responsive">
+    <table class="table table-hover custom-table">
+      <thead>
       <tr>
         <th>Getränk</th>
         <th>Preis/Stück</th>
         <th>Anzahl</th>
         <th>Gesamt</th>
       </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let c of consumptions.consumptions" (dblclick)="addOne(c)">
+      </thead>
+      <tbody>
+      <tr *ngFor="let c of consumptions.consumptions" (click)="addOne(c)">
         <td>{{c.drink.name}}</td>
         <td>{{c.drink.price}}€</td>
         <td>{{c.amount}}</td>
         <td>{{c.amount * c.drink.price}}€</td>
       </tr>
-    </tbody>
-  </table>
+      </tbody>
+    </table>
+  </div>
 </div>
