--- a/frontend/src/app/Pages/home/home.component.html
+++ b/frontend/src/app/Pages/home/home.component.html
@@ -1,17 +1,7 @@
-<div class="row" style="display: flex; justify-content: space-between">
-
-  <div class="col-4">
-    <h3>Suche nach Besuch an:</h3>
-    <div class="selection-container">
-      <select [(ngModel)]="selectedLocation" class="form-select custom-select" size="10" aria-label="size 10 select example">
-        <option *ngFor="let l of selectionLocations" [disabled]="isVisited(l)" class="custom-button" [value]="l.id">{{ l.name }} {{ l.hostName }}</option>
-      </select>
-      <button class="btn btn-outline-secondary custom-button" (click)="sendLocationRequest()">Anfragen</button>
-    </div>
-  </div>
-  <div class="col-6">
+<div class="row">
+  <div class="col-lg-6 col-md-6 col-12">
     <h3>Deine Besuche:</h3>
-    <table class="table">
+    <table class="table table-hover custom-table">
       <thead>
       <tr>
         <th>Name</th>
@@ -21,13 +11,23 @@
       </tr>
       </thead>
       <tbody>
-      <tr *ngFor="let loc of locations" (dblclick)="openConsumptions(loc.id,loc.consumptions)">
+      <tr *ngFor="let loc of locations">
         <td>{{loc.name}}</td>
         <td>{{loc.hostName}}</td>
         <td>{{getTotalConsumptionPrice(loc.consumptions)}}</td>
-        <td></td>
+        <td><button (click)="openConsumptions(loc.id, loc.consumptions)">Eingabe</button></td>
       </tr>
       </tbody>
     </table>
+  </div>
+  <hr>
+  <div class="col-lg-4 col-md-6 col-12 mb-4">
+    <h3>Suche nach Besuch an:</h3>
+    <div class="selection-container">
+      <select [(ngModel)]="selectedLocation" class="form-select custom-select" size="10" aria-label="size 10 select example">
+        <option *ngFor="let l of selectionLocations" [disabled]="isVisited(l)" class="custom-button" [value]="l.id">{{ l.name }} {{ l.hostName }}</option>
+      </select>
+      <button class="btn btn-outline-secondary custom-button" (click)="sendLocationRequest()">Anfragen</button>
+    </div>
   </div>
 </div>
