--- a/frontend/src/app/Pages/locations/location.component.scss
+++ b/frontend/src/app/Pages/locations/location.component.scss
@@ -4,7 +4,7 @@
 }
 
 .card-header {
-  background-color: #007bff;
+  background-color: #F0E5A4;
   color: white;
   border-bottom: none;
   text-align: center;
