--- a/frontend/src/app/Pages/locations/locations.component.html
+++ b/frontend/src/app/Pages/locations/locations.component.html
@@ -1,59 +1,72 @@
-<div class="row">
-  <div class="container mt-3 col-7">
-    <div class="row mb-3">
-      <div class="col text-center">
-        <button type="button" class="btn btn-primary" (click)="addLocation()">Neues Location einfügen</button>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-lg-8 col-md-12 mb-4">
+      <div class="card">
+
+          <button type="button" class="btn btn-success"  (click)="addLocation()">Neues Location einfügen</button>
+
+        <div class="table-responsive">
+          <table class="table table-striped table-bordered custom-table">
+            <thead class="thead-dark">
+            <tr>
+              <th scope="col">Name</th>
+              <th scope="col">Latitude</th>
+              <th scope="col">Longitude</th>
+              <th scope="col">Actions</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr *ngFor="let d of locations">
+              <td (dblclick)="editLocation(d)">
+                <label *ngIf="!d.editMode" (dblclick)="editLocation(d)">{{d.name}}</label>
+                <input *ngIf="d.editMode" type="text" [(ngModel)]="d.name" class="form-control" />
+              </td>
+              <td (dblclick)="editLocation(d)">
+                <label *ngIf="!d.editMode" (dblclick)="editLocation(d)">{{d.latitude}}</label>
+                <input *ngIf="d.editMode" type="text" [(ngModel)]="d.latitude" class="form-control" />
+              </td>
+              <td (dblclick)="editLocation(d)">
+                <label *ngIf="!d.editMode" (dblclick)="editLocation(d)">{{d.longitude}}</label>
+                <input type="text" [(ngModel)]="d.longitude" *ngIf="d.editMode" class="form-control" />
+              </td>
+              <td>
+                <button type="button"
+                        *ngIf="d.editMode"
+                        class="btn btn-outline-success btn-sm"
+                        [disabled]="d.name.trim()==''"
+                        (click)="updateLocation(d)">Save</button>
+
+                <button type="button"
+                        *ngIf="d.editMode"
+                        class="btn btn-outline-warning btn-sm"
+                        (click)="cancelEdit(d)">Cancel</button>
+
+                <button type="button"
+                        *ngIf="d.editMode"
+                        class="btn btn-outline-danger btn-sm"
+                        (click)="deleteLocation(d)">Delete</button>
+              </td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
-    <div class="table-responsive">
-      <table class="table table-striped table-bordered">
-        <thead>
-        <tr>
-          <th scope="col">Name</th>
-          <th scope="col">Latitude</th>
-          <th scope="col">Longitude</th>
-          <th scope="col">Actions</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr *ngFor="let d of locations">
-          <td (dblclick)="editLocation(d)">
-            <label *ngIf="!d.editMode" (dblclick)="editLocation(d)">{{d.name}}</label>
-            <input *ngIf="d.editMode" type="text" [(ngModel)]="d.name"  class="form-control" />
-          </td>
-          <td (dblclick)="editLocation(d)">
-            <label *ngIf="!d.editMode" (dblclick)="editLocation(d)">{{d.latitude}}</label>
-            <input  *ngIf="d.editMode"  type="text" [(ngModel)]="d.latitude" class="form-control" />
-          </td>
-          <td (dblclick)="editLocation(d)">
-            <label *ngIf="!d.editMode" (dblclick)="editLocation(d)">{{d.longitude}}</label>
-            <input type="text" [(ngModel)]="d.longitude" *ngIf="d.editMode" class="form-control" />
-          </td>
-          <td>
-            <button type="button"
-                    *ngIf="d.editMode"
-                    class="btn btn-outline-success btn-sm"
-                    [disabled]="d.name.trim()==''"
-                    (click)="updateLocation(d)">Save</button>
-
-            <button type="button"
-                    *ngIf="d.editMode"
-                    class="btn btn-outline-warning btn-sm"
-                    (click)="cancelEdit(d)">Cancel</button>
-
-            <button type="button"
-                    *ngIf="d.editMode"
-                    class="btn btn-outline-danger btn-sm"
-                    (click)="deleteLocation(d)">Delete</button>
-          </td>
-        </tr>
-        </tbody>
-      </table>
+    <div class="col-lg-4 col-md-12">
+      <div class="card">
+        <div class="card-header">
+          <h5>Anfragen</h5>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let r of requests">
+            <span>{{r.visitorName}} {{r.locationName}}</span>
+            <span>
+              <button class="btn btn-sm btn-success" (click)="acceptRequest(r)">Annehmen</button>
+              <button class="btn btn-sm btn-danger">Ablehnen</button>
+            </span>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
-  <div class="col-4">
-    <ul>
-      <li *ngFor="let r of requests">{{r.visitorName}} {{r.locationName}} <Button class="btn btn-sm btn-success" (click)="acceptRequest(r)">Annehmen</Button> <Button class="btn btn-sm btn-danger">Ablehenen</Button> </li>
-    </ul>
   </div>
 </div>
