--- a/frontend/src/app/Pages/register/register.component.html
+++ b/frontend/src/app/Pages/register/register.component.html
@@ -1,11 +1,27 @@
-<div class="col-4 offset-4">
-    <div class="col-8">
-        <form [formGroup]="fg" (ngSubmit)="register()">
-            <input type="text" formControlName="email" placeholder="Email Address" class="m-1 form-control" />
-            <input type="password" formControlName="password" placeholder="Password" class="m-1 form-control" />
-            <input type="password" formControlName="passwordConfirm" placeholder="Verify Password" class="m-1 form-control" />
-            <input type="text" formControlName="name" placeholder="Full Name" class="m-1 form-control" />
-            <div class="col-2"><button type="submit" [disabled]="!fg.valid" class="btn btn-sm btn-outline-success m-1">Register</button></div>
-        </form>
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-lg-6 col-md-8">
+      <div class="card">
+        <div class="card-body">
+          <form [formGroup]="fg" (ngSubmit)="register()">
+            <div class="form-group mb-3">
+              <input type="text" formControlName="email" placeholder="Email Address" class="form-control" />
+            </div>
+            <div class="form-group mb-3">
+              <input type="password" formControlName="password" placeholder="Password" class="form-control" />
+            </div>
+            <div class="form-group mb-3">
+              <input type="password" formControlName="passwordConfirm" placeholder="Verify Password" class="form-control" />
+            </div>
+            <div class="form-group mb-4">
+              <input type="text" formControlName="name" placeholder="Full Name" class="form-control" />
+            </div>
+            <div class="d-grid">
+              <button type="submit" [disabled]="!fg.valid" class="btn btn-success btn-block">Register</button>
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
